--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,15 +1,24 @@
 
+set -g utf8
+set-window-option -g utf8 on
+
 # 256 colors for vim
 set -g default-terminal "screen-256color"
 
 set -s escape-time 0
 set -g history-limit 10000
-set -g c0-change-trigger 150
-set -g c0-change-interval 100
 
 # Start window numbering at 1
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
+
+set-option -g status-keys vi
+set-window-option -g mode-keys vi
+
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
 
 # Cycle panes with C-b C-b
 unbind ^B
@@ -28,5 +37,10 @@ set -g mouse-select-window on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # rate limit the screen updating on large text
-setw -g c0-change-trigger 10
-setw -g c0-change-interval 250
+# setw -g c0-change-trigger 50
+# setw -g c0-change-interval 75
+
+# Status line theme
+set-option -g status-bg colour235 #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr dim
