--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,10 +28,15 @@ bind ^B select-pane -t :.+
 bind-key r source-file ~/.tmux.conf \; display "Config reloaded!"
 
 # Mouse works as expected
-set -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+# v2.0+
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
+
+# < v2.0
+# set -g mode-mouse on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+# set -g mouse-select-window on
 
 # Scrolling works as expected
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
