--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule ".vim/bundle/vim-better-whitespace"]
 	path = .vim/bundle/vim-better-whitespace
 	url = https://github.com/ntpeters/vim-better-whitespace
+[submodule ".vim/bundle/vim-hexcolor"]
+	path = .vim/bundle/vim-hexcolor
+	url = git@github.com:etdev/vim-hexcolor.git
