--- a/.gitmodules
+++ b/.gitmodules
@@ -43,6 +43,9 @@
 [submodule ".vim/bundle/vim-go"]
 	path = .vim/bundle/vim-go
 	url = https://github.com/fatih/vim-go
-[submodule ".vim/bundle/vim-jsx"]
-	path = .vim/bundle/vim-jsx
-	url = git@github.com:mxw/vim-jsx.git
+[submodule ".vim/bundle/vim-esformatter"]
+	path = .vim/bundle/vim-esformatter
+	url = https://github.com/millermedeiros/vim-esformatter
+[submodule ".vim/bundle/vim-jsx-pretty"]
+	path = .vim/bundle/vim-jsx-pretty
+	url = https://github.com/MaxMEllon/vim-jsx-pretty
