--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 
-set -g utf8
-set-window-option -g utf8 on
+# No longer needed in 3
+# set -g utf8
+# set-window-option -g utf8 on
 
 # 256 colors for vim
 set -g default-terminal "screen-256color"
@@ -17,15 +18,19 @@ set-window-option -g mode-keys vi
 
 unbind p
 bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# v2.0
+#bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'y' copy-selection
+# v3.0
+bind -Tcopy-mode-vi v send -X begin-selection
+bind -Tcopy-mode-vi y send -X copy-selection
 
 # Cycle panes with C-b C-b
 unbind ^B
 bind ^B select-pane -t :.+
 
 # Reload config with a key
-bind-key r source-file ~/.tmux.conf \; display "Config reloaded!"
+#bind-key r source-file ~/.tmux.conf \; display "Config reloaded!"
 
 # Mouse works as expected
 # v2.0+
@@ -48,4 +53,8 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 # Status line theme
 set-option -g status-bg colour235 #base02
 set-option -g status-fg yellow #yellow
-set-option -g status-attr dim
+
+# 2.0
+# set-option -g status-attr dim
+# 3.0
+set-option -g status-style dim
